# S107_CICD_GithubActions

./: Jenkinsfile  README.md  dockerfile  main.py  pyproject.toml  test_CarrinhoCompras.py
.github/workflows/: python-app.yml
scripts/: shell.sh
